--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
     <body>
         <main role="main" tabindex="-1">
             <h1>Lorem Ipsum</h1>
-            <p>Hi, I'm [First-name] and I'm an artist and graphic designer based in [Lorem ipsum, dolor].</p>
+            <p>Hi, I'm [Caroline-Betts] and I'm an artist and graphic designer based in [Byron Bay].</p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.
+                I have a focus on Illustration using Digital art work both vector and pixel based.Open to commision work
             </p>
             <p>
                 You can find me on
