--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
     <body>
         <main role="main" tabindex="-1">
             <h1>Lorem Ipsum</h1>
-            <p>Hi, I'm [Caroline-Betts] and I'm an artist and graphic designer based in [Byron Bay].</p>
+            <p>Hi, I'm Caroline, I'm an Illustrator and graphic designer based in Byron Bay.</p>
             <p>
-                I have a focus on Illustration using Digital art work both vector and pixel based.Open to commision work
+                I have a focus on Illustration using Digital art work both vector and pixel based.I love drawing cartoon charactors all the way up to realistic pieces 
+                Open to commision work through contacting through one of my thangs 
             </p>
             <p>
                 You can find me on
