--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Lorem Ipsum</title>
+        <title>Welcome</title>
 
         <meta charset="UTF-8" />
         <meta name="description" content="Artist and graphic designer based in..." />
