--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
     </head>
     <body>
         <main role="main" tabindex="-1">
-            <h1>Lorem Ipsum</h1>
-            <p>Hi, I'm Caroline, I'm an Illustrator and graphic designer based in Byron Bay.</p>
+            <h1>Welcome</h1>
+            <p>Heyyy, I'm Caroline, I'm an Illustrator and graphic designer based in Byron Bay.</p>
             <p>
                 I have a focus on Illustration using Digital art work both vector and pixel based.I love drawing cartoon charactors all the way up to realistic pieces 
-                Open to commision work through contacting through one of my thangs 
+                I love drawing anything whimsical or fun. When im not creating art im hanging with my pets or gaming 
+                Open to commision work through contacting through one of my thangs let me bring life to your vision
             </p>
             <p>
                 You can find me on
