--- a/index.html
+++ b/index.html
@@ -75,15 +75,21 @@
         <main role="main" tabindex="-1">
             <h1>Welcome</h1>
             <p>Heyyy, I'm Caroline, I'm an Illustrator and graphic designer based in Byron Bay.</p>
-            <p>
+           
+                Im a 24year old aussie creative,
                 I have a focus on Illustration using Digital art work both vector and pixel based.I love drawing cartoon charactors all the way up to realistic pieces 
-                I love drawing anything whimsical or fun. When im not creating art im hanging with my pets or gaming 
+                I love drawing anything whimsical or fun. Always trying new mediums for my work.
+                When im not creating art im hanging with my pets or winning at gaming 
+
+                Im also experienced in Illustrator, In design and Fresco so i can tackle anything from book Designs and graphic layouts to branding and logo creation 
+                whether your after a custom logo, a fresh book cover or a stunning graphic design for your project ive gotchu 
+                
                 Open to commision work through contacting through one of my thangs let me bring life to your vision
             </p>
             <p>
                 You can find me on
                 <a href="#">Instagram</a>, <a href="#">Artstation</a>, <a href="#">Behance</a>, and
-                <a href="#">LinkedIn</a>.
+                <a href="#">Spotify</a>.
             </p>
         </main>
     </body>
