--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h1>Welcome</h1>
             <p>Heyyy, I'm Caroline, I'm an Illustrator and graphic designer based in Byron Bay.</p>
            
-                Im a 24year old aussie creative,
+            <p></p> Im a 24year old aussie creative,
                 I have a focus on Illustration using Digital art work both vector and pixel based.I love drawing cartoon charactors all the way up to realistic pieces 
                 I love drawing anything whimsical or fun. Always trying new mediums for my work.
                 When im not creating art im hanging with my pets or winning at gaming 
