--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </p>
             <p>
                 You can find me on
-                <a href="#">Instagram</a>, <a href="#">Artstation</a>, <a href="#">Behance</a>, and
+                <a href="https://www.instagram.com/cazzas_/">Instagram</a>, <a href="#">Artstation</a>, <a href="#">Behance</a>, and
                 <a href="#">Spotify</a>.
             </p>
         </main>
     </body>
-</html>https://www.instagram.com/cazzas_/
+</html>
 
